@@ -5,6 +5,8 @@ import de.muenchen.oss.wahllokalsystem.authservice.MicroServiceApplication;
 import de.muenchen.oss.wahllokalsystem.authservice.TestConstants;
 import de.muenchen.oss.wahllokalsystem.authservice.domain.Authority;
 import de.muenchen.oss.wahllokalsystem.authservice.domain.AuthorityRepository;
+import de.muenchen.oss.wahllokalsystem.authservice.domain.Permission;
+import de.muenchen.oss.wahllokalsystem.authservice.domain.PermissionRepository;
 import de.muenchen.oss.wahllokalsystem.authservice.domain.User;
 import de.muenchen.oss.wahllokalsystem.authservice.domain.UserRepository;
 import de.muenchen.oss.wahllokalsystem.authservice.rest.UserDTO;
@@ -18,6 +20,7 @@ import java.util.regex.Pattern;
 import lombok.Data;
 import lombok.val;
 import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -53,6 +56,9 @@ class LdapConfigurationTest {
     AuthorityRepository authorityRepository;
 
     @Autowired
+    PermissionRepository permissionRepository;
+
+    @Autowired
     RegisteredClientRepository registeredClientRepository;
 
     @Autowired
@@ -72,70 +78,35 @@ class LdapConfigurationTest {
     @BeforeEach
     void setup() {
         authorityRepository.deleteAll();
-        userRepository.deleteUsersByWahltagID(WAHLTAG_ID);
+        permissionRepository.deleteAll();
+    }
+
+    @AfterEach
+    void tearDown() {
+        transactionTemplate.executeWithoutResult(status -> {
+            authorityRepository.deleteAll();
+            permissionRepository.deleteAll();
+            userRepository.deleteUsersByWahltagID(WAHLTAG_ID);
+        });
     }
 
     @Nested
     class WithEmbeddedLdapServer {
 
+        final String EMBEDDED_LDAP_USER = "wls_all";
+        final String EMBEDDED_LDAP_PASSWORD = "test";
+
         final Pattern csrfTokenPattern = Pattern.compile("<input .* id=\"csrf_token\".*\\r?\\n?.*value=\\\"(.*)\\\".*\\/>");
         final Pattern codePattern = Pattern.compile("code=(.*)");
 
         @Test
-        void should_loginAndAccessRessourceSuccessfully_when_usingEmbeddedUser() {
-            val username = "user";
-
-            transactionTemplate.executeWithoutResult(status -> {
-                val authorityToSave = new Authority("WLS_WAHLVORSTAND", Collections.emptySet(), Collections.emptySet());
-                val authoritySaved = authorityRepository.save(authorityToSave);
-                val userToSave = new User(username, null, null, true, true, WAHLTAG_ID, null, null, null, null, null, new HashSet<>(Set.of(authoritySaved)),
-                        null);
-                userRepository.save(userToSave);
-            });
-
-            //try to access restricted resource
-            val restrictedResourceRequestHeaders = new HttpHeaders();
-            restrictedResourceRequestHeaders.set(HttpHeaders.ACCEPT, "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,*/*;q=0.8");
-            val restrictedResourceRequest = new RequestEntity<>(restrictedResourceRequestHeaders, HttpMethod.GET, URI.create(getHost() + "/demo?wahllokalgui"));
-            val restrictedResourceResponse = restTemplate.exchange(restrictedResourceRequest, String.class);
-            Assertions.assertThat(restrictedResourceResponse.getStatusCode()).isEqualTo(HttpStatus.FOUND);
-
-            val restrictedResourceRequestSessionID = getSessionID(restrictedResourceResponse);
-
-            //Get Form and extract csrfToken
-            val formLoginRequestHeaders = new HttpHeaders();
-            formLoginRequestHeaders.add("Cookie", restrictedResourceRequestSessionID);
-            val formLoginRequest = new RequestEntity<>(formLoginRequestHeaders, HttpMethod.GET, URI.create(getHost() + "/login"));
-            val formLoginResponse = restTemplate.exchange(formLoginRequest, String.class);
-            Assertions.assertThat(formLoginResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
-            val csrfToken = getCsrfToken(formLoginResponse);
-
-            //Login with user and get jSessionID
-            val loginRequestHeaders = new HttpHeaders();
-            loginRequestHeaders.add("Content-Type", "application/x-www-form-urlencoded");
-            loginRequestHeaders.add("Cookie", restrictedResourceRequestSessionID);
-            val loginRequestBody = "username=" + username + "&password=password&_csrf=" + csrfToken;
-            val loginRequest = new RequestEntity<>(loginRequestBody, loginRequestHeaders, HttpMethod.POST, URI.create(getHost() + "/login"));
-            val loginResponse = restTemplate.exchange(loginRequest, String.class);
-            Assertions.assertThat(loginResponse.getStatusCode()).isEqualTo(HttpStatus.FOUND);
-
-            //verify resource access
-            val resourceAccessHeaders = new HttpHeaders();
-            resourceAccessHeaders.add("Cookie", restrictedResourceRequestSessionID);
-            resourceAccessHeaders.add(HttpHeaders.ACCEPT, "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,*/*;q=0.8");
-            val resourceAccessRequest = new RequestEntity<>(resourceAccessHeaders, HttpMethod.GET, URI.create(getHost() + "/demo"));
-            val resourceAccessResponse = restTemplate.exchange(resourceAccessRequest, String.class);
-            Assertions.assertThat(resourceAccessResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
-        }
-
-        @Test
         void should_accessSecureResource_when_loggingInWithToken() throws Exception {
-            val username = "user";
-
             transactionTemplate.executeWithoutResult(status -> {
-                val authorityToSave = new Authority("WLS_WAHLVORSTAND", Collections.emptySet(), Collections.emptySet());
+                val savedPermission = permissionRepository.save(new Permission("permission"));
+                val authorityToSave = new Authority("WLS_WAHLVORSTAND", new HashSet<>(Set.of(savedPermission)), Collections.emptySet());
                 val authoritySaved = authorityRepository.save(authorityToSave);
-                val userToSave = new User(username, null, null, true, true, WAHLTAG_ID, null, null, null, null, null, new HashSet<>(Set.of(authoritySaved)),
+                val userToSave = new User(EMBEDDED_LDAP_USER, null, null, true, true, WAHLTAG_ID, null, null, null, null, null,
+                        new HashSet<>(Set.of(authoritySaved)),
                         null);
                 userRepository.save(userToSave);
             });
@@ -185,7 +156,7 @@ class LdapConfigurationTest {
             loginRequestHeaders.add("Content-Type", "application/x-www-form-urlencoded");
             loginRequestHeaders.add("Cookie", restrictedResourceRequestSessionID);
             loginRequestHeaders.add("referer", getHost() + "/login");
-            val loginRequestBody = "username=" + username + "&password=password&_csrf=" + csrfToken;
+            val loginRequestBody = "username=" + EMBEDDED_LDAP_USER + "&password=" + EMBEDDED_LDAP_PASSWORD + "&_csrf=" + csrfToken;
             val loginRequest = new RequestEntity<>(loginRequestBody, loginRequestHeaders, HttpMethod.POST, URI.create(getHost() + "/login"));
             val loginResponse = restTemplate.exchange(loginRequest, String.class);
 
@@ -216,7 +187,7 @@ class LdapConfigurationTest {
             userRequestHeaders.add("Authorization", "Bearer " + token);
             val userRequest = new RequestEntity<>(userRequestHeaders, HttpMethod.GET, URI.create(getHost() + "/user"));
             val userResponse = restTemplate.exchange(userRequest, UserDTO.class);
-            Assertions.assertThat(userResponse.getBody().authorities()).containsExactly("WLS_WAHLVORSTAND");
+            Assertions.assertThat(userResponse.getBody().authorities()).isNotEmpty();
         }
 
         private String getHost() {
